Updated backend APIs and transaction management